@startuml

title __WORKERS's Class Diagram__\n

  namespace com.example.foodliveryapp {
    namespace recycler.workers {
      class com.example.foodliveryapp.recycler.workers.Worker {
          - active : boolean
          - name : String
          - phoneNumber : String
          - surname : String
          + Worker()
          + getName()
          + getPhoneNumber()
          + getSurname()
          + isActive()
          + setActive()
          + setName()
          + setPhoneNumber()
          + setSurname()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.workers {
      class com.example.foodliveryapp.recycler.workers.WorkersListAdapter {
          - context : Context
          - workerList : List<Worker>
          + WorkersListAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.workers {
      class com.example.foodliveryapp.recycler.workers.WorkersListAdapter.ViewHolder {
          ~ callButton : ImageView
          ~ workerNameTextView : TextView
          + ViewHolder()
      }
    }
  }
  

  com.example.foodliveryapp.recycler.workers.WorkersListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodliveryapp.recycler.workers.WorkersListAdapter +-down- com.example.foodliveryapp.recycler.workers.WorkersListAdapter.ViewHolder
  com.example.foodliveryapp.recycler.workers.WorkersListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
